[tool.poetry]
name = "learning-fastapi"
version = "0.1.0"
description = ""
authors = ["Kauê Fraga Rodrigues <kauefragarodrigues456@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.89.1"
gunicorn = "^20.1.0"
httpx = "^0.23.3"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
